[package]
name = "wxrust_sys"
version = "0.0.1"
authors = ["Logan Darklock <logandarklock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
env_logger = "0.7.1"
log = "0.4.11"
shlex = "0.1.1"
bindgen = { version = "~0.54.1", features = ["logging"] }
